--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-navigation": "^2.16.0",
     "react-native-network-info": "^4.0.1",
     "react-native-paper": "^2.15.2",
+    "react-native-picker-select": "^6.3.0",
     "react-native-public-ip": "^1.0.1",
     "react-native-simple-device-info": "^0.23.3",
     "react-navigation": "^3.6.1",
