--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.6.0-alpha.8af6728",
     "react-native": "^0.57.8",
     "react-native-datepicker": "^1.7.2",
+    "react-native-deck-swiper": "^1.6.7",
     "react-native-device-info": "^1.4.3",
     "react-native-dotenv": "^0.2.0",
     "react-native-fbsdk": "^0.10.1",
@@ -42,6 +43,7 @@
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-swipe-gestures": "^1.0.3",
     "react-native-unimodules": "^0.5.0",
+    "react-native-view-overflow": "0.0.4",
     "react-navigation": "^3.6.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^6.0.1",
