--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "blueimp-canvas-to-blob": "^3.14.0",
     "create-react-context": "^0.2.3",
+    "date-fns": "^1.30.1",
     "expo": "^32.0.0",
     "expo-cli": "^3.0.6",
     "expo-constants": "latest",
