--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "react-native-device-info": "^1.4.3",
     "react-native-dotenv": "^0.2.0",
     "react-native-fbsdk": "^0.10.1",
+    "react-native-gifted-chat": "^0.9.11",
     "react-native-google-signin": "^2.0.0",
     "react-native-image-picker": "^0.28.1",
+    "react-native-indicators": "^0.13.0",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-navigation": "^2.16.0",
     "react-native-network-info": "^4.0.1",
     "react-native-paper": "^2.15.2",
@@ -42,6 +45,7 @@
     "react-native-simple-device-info": "^0.23.3",
     "react-native-simple-dialogs": "^1.2.0",
     "react-native-simple-radio-button": "^2.7.3",
+    "react-native-smart-carousel": "^1.1.0",
     "react-native-swipe-gestures": "^1.0.3",
     "react-native-unimodules": "^0.5.0",
     "react-native-view-overflow": "0.0.4",
@@ -50,6 +54,8 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "sharp": "^0.23.0",
+    "stream-chat": "^1.0.4",
+    "stream-chat-expo": "^0.1.18",
     "validator": "^10.11.0",
     "watchman": "^1.0.0"
   },
