--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/netinfo": "^2.0.3",
     "@unimodules/core": "^3.0.0",
     "@unimodules/react-native-adapter": "^3.0.0",
+    "Base64": "^1.0.2",
     "axios": "^0.18.0",
     "blueimp-canvas-to-blob": "^3.14.0",
     "create-react-context": "^0.2.3",
@@ -21,8 +22,11 @@
     "expo-core": "^3.0.1",
     "expo-facebook": "~3.0.0",
     "expo-google-sign-in": "^6.0.0",
+    "expo-image-manipulator": "^6.0.0",
     "expo-react-native-adapter": "^3.0.1",
     "latest": "^0.2.0",
+    "lz-string": "^1.4.4",
+    "lzutf8": "^0.5.5",
     "moment": "^2.24.0",
     "npm-upgrade": "^2.0.0",
     "react": "^16.6.0-alpha.8af6728",
@@ -35,6 +39,7 @@
     "react-native-gifted-chat": "^0.9.11",
     "react-native-google-signin": "^2.0.0",
     "react-native-image-picker": "^0.28.1",
+    "react-native-image-resizer": "^1.0.1",
     "react-native-indicators": "^0.13.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-navigation": "^2.16.0",
@@ -54,6 +59,8 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "sharp": "^0.23.0",
+    "shorter": "^0.3.1",
+    "stream": "0.0.2",
     "stream-chat": "^1.0.4",
     "stream-chat-expo": "^0.1.18",
     "validator": "^10.11.0",
