--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-deck-swiper": "^1.6.7",
     "react-native-device-info": "^1.4.3",
     "react-native-dotenv": "^0.2.0",
+    "react-native-elements": "^1.1.0",
     "react-native-fbsdk": "^0.10.1",
     "react-native-gifted-chat": "^0.9.11",
     "react-native-google-signin": "^2.0.0",
