--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react": "^16.6.0-alpha.8af6728",
     "react-facebook": "^8.0.4",
     "react-native": "^0.57.8",
+    "react-native-autogrow-textinput": "^5.2.0",
+    "react-native-blur": "^3.2.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-deck-swiper": "^1.6.7",
     "react-native-device-info": "^1.4.3",
@@ -43,6 +45,8 @@
     "react-native-image-picker": "^0.28.1",
     "react-native-image-resizer": "^1.0.1",
     "react-native-indicators": "^0.13.0",
+    "react-native-keyboard-accessory": "^0.1.9",
+    "react-native-keyboard-input": "^5.3.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-navigation": "^2.16.0",
     "react-native-network-info": "^4.0.1",
