--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-simple-dialogs": "^1.2.0",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-smart-carousel": "^1.1.0",
+    "react-native-snap-carousel": "^3.8.0",
     "react-native-swipe-gestures": "^1.0.3",
     "react-native-unimodules": "^0.5.0",
     "react-native-view-overflow": "0.0.4",
